--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <!--Link Css-->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/social-media.css">
+    <link rel="stylesheet" href="css/form.css">
     <!--Link Fuente-->
     <script src="https://use.fontawesome.com/502b7294a9.js"></script>
     <!-- Link Boostrap -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous"> -->
     <!--Link FavIcon-->
     <link rel="shortcut icon" type="image/jpg" href="../img/FavIcon.png">
+    <!--Descripción del sitio para el SEO-->
+    <meta name="description" content="Sitio especialista en tecnología."/>
     <title>Cosmos I Home</title>
 </head>
 
@@ -30,31 +35,34 @@
             <form autocomplete="off">
                 <div>
                     <input type="search" name="q" placeholder="Buscar">
-                    <img src="../img/LUPA .png" alt="Lupa" class="lupa">
+                    <img src="/img/LUPA .png" alt="Lupa" class="lupa">
                 </div>
             </form>
             <a href="#" class="enlace">
                 <figure>
-                    <img src="../img/logo cosmos - copia.png" alt="" class="logo">
+                    <img src="/img/logo cosmos - copia.png" alt="Logo" class="logo">
                 </figure>
             </a>
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="../pages/pdd.html">Productos</a>
+                <li><a href="/pages/pdd.html">Productos</a>
                     <ul class="subMenu">
-                        <li>Smart TV</li>
-                        <li>Smartphone</li>
-                        <li>Laptop</li>
+                        <li>Electrodomésticos</li>
+                        <li>Computadoras</li>
+                        <li>Audio y sonido</li>
+                        <li>Televisores</li>
+                        <li>Relojes</li>
+                        <li>Fotografía</li>
                     </ul>
                 </li>
-                <li><a href="../pages/pdd.html">Ofertas del día</a></li>
-                <li><a href="../pages/micuenta.html">Mi cuenta</a></li>
-                <li><a href="../pages/somos.html">Conocenos</a></li>
+                <li><a href="/pages/carrito.html">Carro de compras</a></li>
+                <li><a href="/pages/micuenta.html">Mi cuenta</a></li>
+                <li><a href="/pages/somos.html">Conocenos</a></li>
                 
             </ul>
             <!--Contenedor de Redes Sociales-->
             <div class="red">
-                <!--el target _blanck hace que al hacer clic abra el link en otra pestaña sin salir del sitio-->
+                <!--el target _blank hace que al hacer clic abra el link en otra pestaña sin salir del sitio-->
                 <div id="facebook"><a href="https://www.facebook.com/" target="_blank" class="fa fa-facebook"></a></div>
                 <div id="instagram"><a href="https://www.instagram.com/" target="_blank" class="fa fa-instagram"></a>
                 </div>
@@ -64,43 +72,88 @@
         </nav>
     </header>
     <main>
-        <section class="banner">          
+        <section class="banner">   
+            <figure>
+                <img src="/img/BANNER XIAOMI.jpg" alt="Banner Home">
+            </figure> 
             <div class="botonBanner">
                 <button class="compraAqui">Compra aquí</button>
             </div>          
         </section>          
-        <section> 
-            <div class="seccionCategorias">
-            <h1>Nuestros productos</h1>
-            <h3>Manejamos las referencias más reconocidas del mercado</h3>
-            <div class="contenedorCategorias">
-                <div class="categoria">
+    </section> <!--Daniela modifique categorias, la hice slider-->
+    <div class="seccionCategorias"> <!--slide-container-->
+        <h1>Nuestros productos</h1>
+        <h3>Manejamos las referencias más reconocidas del mercado</h3>
+        <input type="radio" name="dot" id="one" />
+        <input type="radio" name="dot" id="two" />
+        <div class="main-card">
+            <div class="contenedorCategorias"> <!--cards-->
+                <div class="categoria"> <!--card-->
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <a href='https://postimg.cc/7bbGzb0Q' target='_blank'><img src='https://i.postimg.cc/9XYGv7MV/audifonos.png' border='0' alt='audifonos' class="imgCategoria" width="90%" loading="lazy"/></a>
-                        <!-- <img src="../img/audifonos.png" alt="Imagen genérica de auriculares" class="imgCategoria"> -->
+                        <!--image-content--><a href='https://postimg.cc/BjxsKD9Z' target='_blank'><img src='https://i.postimg.cc/52rtDqsz/audifonos.png' alt='audifonos' class="imgCategoria" width="90%" loading="lazy"></a>
+                        <!--card-image-->
+                        <!--card content-->
                     </figure>
                     <button class="botonCategoria">Auriculares</button>
                 </div>
                 <div class="categoria">
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <a href='https://postimg.cc/gn8TYzSn' target='_blank'><img src='https://i.postimg.cc/wTG8Q3Dc/iphone.png' border='0' alt='iphone' class="imgCategoria" width="90%" loading="lazy"/></a>
-                        <!-- <img src="../img/iphone.png" alt="Imagen genérica de celulares" class="imgCategoria"> -->
-                    </figure>                   
+                        <!-- A todas las url de imagenes les quite border=0 -->
+                        <a href='https://postimg.cc/6ycf5bTB' target='_blank'><img
+                                src='https://i.postimg.cc/13hCBLQV/iphone.png' alt='iphone'
+                                class="imgCategoria" width="90%" loading="lazy"></a>
+                    </figure>
                     <button class="botonCategoria">Smartphones</button>
                 </div>
                 <div class="categoria">
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <a href='https://postimg.cc/p9pQLkWq' target='_blank'><img src='https://i.postimg.cc/VNFK4H3Q/mac.png' border='0' alt='mac'class="imgCategoria" width="90%" loading="lazy"/></a>
-                        <!-- <img src="../img/mac.png" alt="Imagen genérica de laptops" class="imgCategoria"> -->
-                    </figure>                    
+                        <a href='https://postimg.cc/rdwrZq94' target='_blank'><img
+                                src='https://i.postimg.cc/d08j11k5/mac.png' alt='mac'
+                                class="imgCategoria" width="90%" loading="lazy"></a>
+                    </figure>
+                    <button class="botonCategoria">Laptops</button>
+                </div>
+            </div>
+            <div class="contenedorCategorias"> <!--cards-->
+                <div class="categoria"> <!--card-->
+                    <figure>
+                        <!--Imagen alojada en URL externa-->
+                        <!--image-content--><a href='https://postimg.cc/BjxsKD9Z' target='_blank'><img src='https://i.postimg.cc/52rtDqsz/audifonos.png' alt='audifonos' class="imgCategoria" width="90%" loading="lazy"></a>
+                        <!--card-image-->
+                        <!--card content-->
+                    </figure>
+                    <button class="botonCategoria">Auriculares</button>
+                </div>
+                <div class="categoria">
+                    <figure>
+                        <!--Imagen alojada en URL externa-->
+                        <!-- A todas las url de imagenes les quite border=0 -->
+                        <a href='https://postimg.cc/6ycf5bTB' target='_blank'><img
+                                src='https://i.postimg.cc/13hCBLQV/iphone.png' alt='iphone'
+                                class="imgCategoria" width="90%" loading="lazy"></a>
+                    </figure>
+                    <button class="botonCategoria">Smartphones</button>
+                </div>
+                <div class="categoria">
+                    <figure>
+                        <!--Imagen alojada en URL externa-->
+                        <a href='https://postimg.cc/rdwrZq94' target='_blank'><img
+                                src='https://i.postimg.cc/d08j11k5/mac.png' alt='mac'
+                                class="imgCategoria" width="90%" loading="lazy"></a>
+                    </figure>
                     <button class="botonCategoria">Laptops</button>
                 </div>
             </div>
         </div>
-        </section>
+        <div class="button">
+            <label for="one" class="one active"></label>
+            <label for="two" class="two"></label>
+        </div>
+    </div>
+</section>
         <section>
             <h2>Lanzamientos</h2>
             <div class="contenedorLanzamiento">
@@ -108,13 +161,12 @@
                     <div class="descuento">20%</div> 
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/HWKjVWjR/R.png' border='0' alt='R'/></a>
-                        <!-- <img src="../img/R.png" alt="Imagen de portatil"> -->
+                        <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/MKHrX6pw/R.png' border='0' alt='Laptop' loading="lazy"/></a>
                     </figure>                    
                     <h2>HP Laptop 15-ef1012la</h2>
                     <div class="containerP">
                         <p><strong>Portátil HP 15.6 Pulgadas AMD RYZEN R5 8GB 256GB</strong></p>
-                        <p><span>Precio $3.499.000</span></p>
+                        <p><span>Precio $3.499.000</span></p>                        
                         <button class="botonProducto">Ver producto</button>
                     </div>
                 </div>
@@ -122,13 +174,12 @@
                     <div class="descuento">30%</div>
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <a href='https://postimg.cc/jW1yBNrm' target='_blank'><img src='https://i.postimg.cc/cHxTgMkx/microondas.png' border='0' alt='microondas' loading="lazy"/></a>
-                        <!-- <img src="../img/microondas.png" alt="Imagen de portatil" height="200rem"> -->
-                    </figure>                     
+                        <a href='https://postimg.cc/Xp8ykMkC' target='_blank'><img src='https://i.postimg.cc/6psLwt7Y/microondas.png' border='0' alt='microondas' loading="lazy"/></a>
+                        </figure>                     
                     <h2>Horno microondas LG NeoChef™</h2>
                     <div class="containerP">
                         <p><strong>1200w con tecnología Smart Inverter</strong></p>
-                        <p><span>Precio $1.499.000</span></p>
+                        <p><span>Precio $1.499.000</span></p>                          
                         <button class="botonProducto">Ver producto</button>
                     </div>
                 </div>
@@ -137,12 +188,11 @@
                     <figure>
                         <!--Imagen alojada en URL externa-->
                         <a href='https://postimg.cc/4nWH0Vb5' target='_blank'><img src='https://i.postimg.cc/DyTQ8cSt/combo-cel.png' border='0' alt='combo-cel' loading="lazy"/></a>
-                        <!-- <img src="../img/combo cel.png" alt="Imagen de portatil" height="200rem"> -->
-                    </figure>                    
+                        </figure>                    
                     <h2>Smartphone Xiaomi12Lite</h2>
                     <div class="containerP">
                         <p><strong>Celular Xiaomi12Lite negro resolución Full-HD</strong></p>
-                        <p><span>Precio $13.499.000</span></p>
+                        <p><span>Precio $13.499.000</span></p>                         
                         <button class="botonProducto">Ver producto</button>
                     </div>
                 </div>
@@ -151,12 +201,11 @@
                     <figure>
                         <!--Imagen alojada en URL externa-->
                         <a href='https://postimg.cc/ThfH0MCb' target='_blank'><img src='https://i.postimg.cc/MZQ2WzB9/tv.png' border='0' alt='tv' loading="lazy"/></a>
-                        <!-- <img src="../img/tv.png" alt="Imagen de portatil" height="200rem"> -->
                     </figure>                   
                     <h2>Smart tv Samsung 4k</h2>
                     <div class="containerP">
                         <p><strong>Procesador Crystal 4k resolución ultra alta </strong></p>
-                        <p><span>Precio $9.499.000</span></p>
+                        <p><span>Precio $9.499.00</span></p>                        
                         <button class="botonProducto">Ver producto</button>
                     </div>
                 </div>
@@ -164,41 +213,36 @@
         </section>
 
         <section>
-            <h2>Nuestras marcas</h2>
+            <h2>Nuestras marcas asociadas</h2>
             <div class="contenedorMarcas">
                 <div>
                     <figure>
                         <!--Imagen alojada en URL externa-->
                         <a href='https://postimg.cc/mzSnGBT0' target='_blank'><img src='https://i.postimg.cc/BbWfHnkQ/APPLE.png' border='0' alt='APPLE' class="marca1" loading="lazy"/></a>
-                        <!-- <img src="../img/APPLE.png" alt="Logo Apple" class="marca1"> -->
                     </figure>                   
                 </div>
                 <div>
                     <figure>
                         <!--Imagen alojada en URL externa-->
                         <a href='https://postimg.cc/fSNByFRY' target='_blank'><img src='https://i.postimg.cc/x8k7xVrp/XIAOMI.png' border='0' alt='XIAOMI'class="marca1" loading="lazy"/></a>
-                        <!-- <img src="../img/XIAOMI.png" alt="Logo Xiaomi" class="marca1"> -->
                     </figure>                    
                 </div>
                 <div>
                     <figure>
                         <!--Imagen alojada en URL externa-->
                         <a href='https://postimg.cc/nCsGZpkN' target='_blank'><img src='https://i.postimg.cc/5Ng7BtF9/LG.png' border='0' alt='LG' class="marca3" loading="lazy"/></a>
-                        <!-- <img src="../img/LG.png" alt="Logo LG" class="marca3"> -->
                     </figure>                   
                 </div>
                 <div>
                     <figure>
                         <!--Imagen alojada en URL externa-->
                         <a href='https://postimg.cc/TKs81dMm' target='_blank'><img src='https://i.postimg.cc/VNfz7vK7/HUAWEI.png' border='0' alt='HUAWEI'class="marca2" loading="lazy"/></a>
-                        <!-- <img src="../img/HUAWEI.png" alt="Logo Huawei" class="marca2"> -->
                     </figure>                    
                 </div>
                 <div>
                     <figure>
                         <!--Imagen alojada en URL externa-->
                         <a href='https://postimg.cc/R6M2bNwk' target='_blank'><img src='https://i.postimg.cc/xCHY8m81/SAMSUNG.png' border='0' alt='SAMSUNG'class="marca2" loading="lazy"/></a>
-                        <!-- <img src="../img/SAMSUNG.png" alt="Logo Samsung" class="marca2"> -->
                     </figure>                    
                 </div>             
         </section>
@@ -213,7 +257,8 @@
             </div>
             <div class="footer1">
                 <ul class="footerLinks">
-                    <li> <a href="#">Preguntas Frecuentes</a>         </li>
+                    <li> <a href="#">Preguntas Frecuentes</a>         
+                    </li>
                     <li> <a href="#">Financiación</a> 
                     </li>
                     <li> <a href="#">Envío</a>   
@@ -226,7 +271,7 @@
             <div class="footer1">
                 <h4>FORMAS DE PAGO</h4>
                 <figure>
-                    <img src="../img/Medios de pago.png" alt="Formas de pago" class="financiacion">
+                    <img src="/img/Medios de pago.png" alt="Formas de pago" class="financiacion">
                 </figure>
             </div>
         </div>  
