--- a/pages/micuenta.html
+++ b/pages/micuenta.html
@@ -6,11 +6,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
         <!--Link Css-->
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="/css/responsive.css">
+        <link rel="stylesheet" href="/css/social-media.css">
+        <link rel="stylesheet" href="/css/form.css">
         <!--Link Fuente-->
         <script src="https://use.fontawesome.com/502b7294a9.js"></script>     
         <!--Link FavIcon-->
-        <link rel="shortcut icon" type="image/jpg" href="../img/FavIcon.png">
+        <link rel="shortcut icon" type="image/jpg" href="/img/FavIcon.png">
+        <!--Descripción del sitio para el SEO-->
+    <meta name="description" content="Regístrate ahora y comienza a disfrutar de todos los beneficios que nuestra tienda online tiene para ofrecer."/>
         <title>Cosmos I Mi cuenta</title>        
 <body>
     <header>
@@ -25,24 +30,27 @@
             <form autocomplete="off">
                 <div>
                     <input type="text" name="q" placeholder="Buscar">
-                    <img src="../img/LUPA .png" alt="Lupa" class="lupa">
+                    <img src="/img/LUPA .png" alt="Lupa" class="lupa">
                 </div>
             </form>
             <a href="#" class="enlace">            
                 <figure>
-                    <img src="../img/logo cosmos - copia.png" alt=""class="logo">
+                    <img src="/img/logo cosmos - copia.png" alt="Logo" class="logo">
                 </figure>             
             </a>
             <ul class="menu">
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="pdd.html">Productos</a>
                     <ul class="subMenu">
-                        <li>Smart TV</li>
-                        <li>Smartphone</li>
-                        <li>Laptop</li>
-                    </ul>       
+                        <li>Electrodomésticos</li>
+                        <li>Computadoras</li>
+                        <li>Audio y sonido</li>
+                        <li>Televisores</li>
+                        <li>Relojes</li>
+                        <li>Fotografía</li>
+                    </ul>    
                 </li>                     
-                <li><a href="pdl.html">Ofertas del día</a></li>    
+                <li><a href="carrito.html">Carro de compras</a></li>    
                 <li><a href="micuenta.html">Mi cuenta</a></li>                    
                 <li><a href="somos.html">Conocenos</a></li>  
             </ul> 
@@ -77,7 +85,8 @@
         </div>
         <div class="footer1">
             <ul class="footerLinks">
-                <li> <a href="#">Preguntas Frecuentes</a>         </li>
+                <li> <a href="#">Preguntas Frecuentes</a>         
+                </li>
                 <li> <a href="#">Financiación</a> 
                 </li>
                 <li> <a href="#">Envío</a>   
@@ -90,7 +99,7 @@
         <div class="footer1">
             <h4>FORMAS DE PAGO</h4>
             <figure>
-                <img src="../img/Medios de pago.png" alt="Formas de pago" class="financiacion">
+                <img src="/img/Medios de pago.png" alt="Formas de pago" class="financiacion">
             </figure>
         </div>
     </div>  
