--- a/index.html
+++ b/index.html
@@ -271,7 +271,8 @@
             <div class="footer1">
                 <h4>FORMAS DE PAGO</h4>
                 <figure>
-                    <img src="/img/Medios de pago.png" alt="Formas de pago" class="financiacion">
+                    <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/15FR11yS/Medios-de-pago.png' border='0' alt='Medios-de-pago'class="financiacion" loading="lazy"/></a>
+                    <!-- <img src="/img/Medios de pago.png" alt="Formas de pago" class="financiacion"> -->
                 </figure>
             </div>
         </div>  
