--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
             <form autocomplete="off">
                 <div>
                     <input type="search" name="q" placeholder="Buscar">
-                    <img src="/img/LUPA .png" alt="Lupa" class="lupa">
+                    <img src="../img/LUPA .png" alt="Lupa" class="lupa">
                 </div>
             </form>
             <a href="#" class="enlace">
                 <figure>
-                    <img src="/img/logo cosmos - copia.png" alt="Logo" class="logo">
+                    <img src="../img/logo cosmos - copia.png" alt="Logo" class="logo">
                 </figure>
             </a>
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="/pages/pdd.html">Productos</a>
+                <li><a href="../pages/pdd.html">Productos</a>
                     <ul class="subMenu">
                         <li>Electrodomésticos</li>
                         <li>Computadoras</li>
@@ -55,9 +55,9 @@
                         <li>Fotografía</li>
                     </ul>
                 </li>
-                <li><a href="/pages/carrito.html">Carro de compras</a></li>
-                <li><a href="/pages/micuenta.html">Mi cuenta</a></li>
-                <li><a href="/pages/somos.html">Conocenos</a></li>
+                <li><a href="../pages/carrito.html">Carro de compras</a></li>
+                <li><a href="../pages/micuenta.html">Mi cuenta</a></li>
+                <li><a href="../pages/somos.html">Conocenos</a></li>
                 
             </ul>
             <!--Contenedor de Redes Sociales-->
@@ -74,7 +74,7 @@
     <main>
         <section class="banner">   
             <figure>
-                <img src="/img/BANNER XIAOMI.jpg" alt="Banner Home">
+                <img src="../img/BANNER XIAOMI.jpg" alt="Banner Home">
             </figure> 
             <div class="botonBanner">
                 <button class="compraAqui">Compra aquí</button>
