--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <!-- Link Boostrap -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous"> -->
     <!--Link FavIcon-->
-    <link rel="shortcut icon" type="image/jpg" href="../img/FavIcon.png">
+    <link rel="shortcut icon" type="image/jpg" href="https://i.postimg.cc/zGhXjHxn/FavIcon.png" sizes="15px">
+    <!-- <link rel="shortcut icon" type="image/jpg" href="/img/FavIcon.png"> -->
     <!--Descripción del sitio para el SEO-->
     <meta name="description" content="Sitio especialista en tecnología."/>
     <title>Cosmos I Home</title>
@@ -35,17 +36,18 @@
             <form autocomplete="off">
                 <div>
                     <input type="search" name="q" placeholder="Buscar">
-                    <img src="img/LUPA .png" alt="Lupa" class="lupa">
+                    <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/FFB2yhY4/LUPA.png' border='0' alt='LUPA'class="lupa" loading="lazy"/></a>
+                    <!-- <img src="img/LUPA .png" alt="Lupa" class="lupa"> -->
                 </div>
             </form>
             <a href="#" class="enlace">
                 <figure>
-                    <img src="img/logo cosmos - copia.png" alt="Logo" class="logo">
+                    <img src="/img/logo cosmos - copia.png" alt="Logo" class="logo">
                 </figure>
             </a>
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="pages/pdd.html">Productos</a>
+                <li><a href="/pages/pdd.html">Productos</a>
                     <ul class="subMenu">
                         <li>Electrodomésticos</li>
                         <li>Computadoras</li>
@@ -55,9 +57,9 @@
                         <li>Fotografía</li>
                     </ul>
                 </li>
-                <li><a href="pages/carrito.html">Carro de compras</a></li>
-                <li><a href="pages/micuenta.html">Mi cuenta</a></li>
-                <li><a href="pages/somos.html">Conocenos</a></li>
+                <li><a href="/pages/carrito.html">Carro de compras</a></li>
+                <li><a href="/pages/micuenta.html">Mi cuenta</a></li>
+                <li><a href="/pages/somos.html">Conocenos</a></li>
                 
             </ul>
             <!--Contenedor de Redes Sociales-->
@@ -74,7 +76,7 @@
     <main>
         <section class="banner">   
             <figure>
-                <img src="img/BANNER XIAOMI.jpg" alt="Banner Home">
+                <img src="/img/BANNER XIAOMI.jpg" alt="Banner Home">
             </figure> 
             <div class="botonBanner">
                 <button class="compraAqui">Compra aquí</button>
