--- a/pages/micuenta.html
+++ b/pages/micuenta.html
@@ -13,7 +13,8 @@
         <!--Link Fuente-->
         <script src="https://use.fontawesome.com/502b7294a9.js"></script>     
         <!--Link FavIcon-->
-        <link rel="shortcut icon" type="image/jpg" href="/img/FavIcon.png">
+        <link rel="shortcut icon" type="image/jpg" href="https://i.postimg.cc/zGhXjHxn/FavIcon.png" sizes="15px">
+        <!-- <link rel="shortcut icon" type="image/jpg" href="/img/FavIcon.png"> -->
         <!--Descripción del sitio para el SEO-->
     <meta name="description" content="Regístrate ahora y comienza a disfrutar de todos los beneficios que nuestra tienda online tiene para ofrecer."/>
         <title>Cosmos I Mi cuenta</title>        
@@ -30,7 +31,8 @@
             <form autocomplete="off">
                 <div>
                     <input type="text" name="q" placeholder="Buscar">
-                    <img src="/img/LUPA .png" alt="Lupa" class="lupa">
+                    <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/FFB2yhY4/LUPA.png' border='0' alt='LUPA'class="lupa" loading="lazy"/></a>
+                    <!-- <img src="/img/LUPA .png" alt="Lupa" class="lupa"> -->
                 </div>
             </form>
             <a href="#" class="enlace">            
