--- a/pages/somos.html
+++ b/pages/somos.html
@@ -13,7 +13,8 @@
     <!--Link Fuentes-->
     <script src="https://use.fontawesome.com/502b7294a9.js"></script>     
     <!--Link FavIcon-->
-    <link rel="shortcut icon" type="image/jpg" href="/img/FavIcon.png">
+    <link rel="shortcut icon" type="image/jpg" href="https://i.postimg.cc/zGhXjHxn/FavIcon.png" sizes="15px">
+    <!-- <link rel="shortcut icon" type="image/jpg" href="/img/FavIcon.png"> -->
     <!--Descripción del sitio para el SEO-->
     <meta name="description" content="Conoce más sobre nosotros y descubre cómo podemos ayudarte en tus proyectos de IT."/>
     <title>Cosmos I Conocenos</title>    
@@ -31,7 +32,8 @@
             <form autocomplete="off">
                 <div>
                     <input type="text" name="q" placeholder="Buscar">
-                    <img src="/img/LUPA .png" alt="Lupa" class="lupa">
+                    <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/FFB2yhY4/LUPA.png' border='0' alt='LUPA'class="lupa" loading="lazy"/></a>
+                    <!-- <img src="/img/LUPA .png" alt="Lupa" class="lupa"> -->
                 </div>
             </form>
             <a href="#" class="enlace">           
