--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous"> -->
     <!--Link FavIcon-->
     <link rel="shortcut icon" type="image/jpg" href="https://i.postimg.cc/zGhXjHxn/FavIcon.png" sizes="15px">
-    <!-- <link rel="shortcut icon" type="image/jpg" href="/img/FavIcon.png"> -->
     <!--Descripción del sitio para el SEO-->
     <meta name="description" content="Sitio especialista en tecnología."/>
     <title>Cosmos I Home</title>
@@ -37,12 +36,11 @@
                 <div>
                     <input type="search" name="q" placeholder="Buscar">
                     <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/FFB2yhY4/LUPA.png' border='0' alt='LUPA'class="lupa" loading="lazy"/></a>
-                    <!-- <img src="img/LUPA .png" alt="Lupa" class="lupa"> -->
                 </div>
             </form>
             <a href="#" class="enlace">
                 <figure>
-                    <img src="/img/logo cosmos - copia.png" alt="Logo" class="logo">
+                   <img src="/img/logo cosmos - copia.png" alt="Logo" class="logo">
                 </figure>
             </a>
             <ul class="menu">
@@ -76,7 +74,9 @@
     <main>
         <section class="banner">   
             <figure>
-                <img src="/img/BANNER XIAOMI.jpg" alt="Banner Home">
+                <img src="https://imagizer.imageshack.com/img922/662/GbaUPV.jpg" alt="Banner Home">
+                
+                <!-- <img src="/img/BANNER XIAOMI.jpg" alt="Banner Home"> -->
             </figure> 
             <div class="botonBanner">
                 <button class="compraAqui">Compra aquí</button>
@@ -274,7 +274,6 @@
                 <h4>FORMAS DE PAGO</h4>
                 <figure>
                     <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/15FR11yS/Medios-de-pago.png' border='0' alt='Medios-de-pago'class="financiacion" loading="lazy"/></a>
-                    <!-- <img src="/img/Medios de pago.png" alt="Formas de pago" class="financiacion"> -->
                 </figure>
             </div>
         </div>  
