--- a/pages/somos.html
+++ b/pages/somos.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <!--Link Css-->
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/responsive.css">
-    <link rel="stylesheet" href="/css/social-media.css">
-    <link rel="stylesheet" href="/css/form.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/social-media.css">
+    <link rel="stylesheet" href="css/form.css">
     <!--Link Fuentes-->
     <script src="https://use.fontawesome.com/502b7294a9.js"></script>     
     <!--Link FavIcon-->
@@ -36,11 +36,11 @@
             </form>
             <a href="#" class="enlace">           
                 <figure>
-                    <img src="/img/logo cosmos - copia.png" alt="Logo" class="logo">
+                    <img src="img/logo cosmos - copia.png" alt="Logo" class="logo">
                 </figure>             
             </a>
             <ul class="menu">
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="pdd.html">Productos</a>
                     <ul class="subMenu">
                         <li>Electrodomésticos</li>
@@ -67,7 +67,7 @@
     <main>
         <section>
             <div class="contenedorTituloConocenos">
-                <img src="/img/banner 4 esquinas.webp" alt="Equipo 4Esquinas">                 
+                <img src="img/banner 4 esquinas.webp" alt="Equipo 4Esquinas">                 
             </div>  
         </section>          
         <section>  
