--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <!--Link Css-->
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/responsive.css">
-    <link rel="stylesheet" href="/css/social-media.css">
-    <link rel="stylesheet" href="/css/form.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/responsive.css">
+    <link rel="stylesheet" href="../css/social-media.css">
+    <link rel="stylesheet" href="../css/form.css">
     <!--Link Fuente-->
     <script src="https://use.fontawesome.com/502b7294a9.js"></script>     
     <!--Link FavIcon-->
@@ -36,9 +36,9 @@
             </form>
 
             <a href="#" class="enlace">            
-                    <figure>
-                        <img src="/img/logo cosmos - copia.png" alt="Logo" class="logo">
-                    </figure>             
+                <figure>
+                    <img src="../img/logo cosmos - copia.png" alt="Logo" class="logo">
+                </figure>             
                 </a>
                 <ul class="menu">
                     <li><a href="/index.html">Home</a></li>
