--- a/pages/pdd.html
+++ b/pages/pdd.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <!--Link Css-->
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/responsive.css">
-    <link rel="stylesheet" href="/css/social-media.css">
-    <link rel="stylesheet" href="/css/form.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/responsive.css">
+    <link rel="stylesheet" href="../css/social-media.css">
+    <link rel="stylesheet" href="../css/form.css">
     <!--Link Fuente-->
     <script src="https://use.fontawesome.com/502b7294a9.js"></script>     
     <!--Link FavIcon-->
@@ -36,8 +36,8 @@
             </form>
             <a href="#" class="enlace">           
                 <figure>
-                    <img src="/img/logo cosmos - copia.png" alt="Logo" class="logo">
-                </figure>             
+                    <img src="../img/logo cosmos - copia.png" alt="Logo" class="logo">
+                </figure>          
             </a>
             <ul class="menu">
                 <li><a href="/index.html">Home</a></li>
@@ -100,7 +100,7 @@
     <section>
     <div class="categoriaBanner">    
         <figure>
-            <img src="/img/banner vacum webp.webp" alt="Banner promocional">
+            <img src="../img/banner vacum webp.webp" alt="Banner promocional">
         </figure>    
             <button class="botonBanner2">Compra ahora</button>      
     </div>
