--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </form>
             <a href="#" class="enlace">
                 <figure>
-                   <img src="/img/logo cosmos - copia.png" alt="Logo" class="logo">
+                   <img src="../img/logo cosmos - copia.png" alt="Logo" class="logo">
                 </figure>
             </a>
             <ul class="menu">
