--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
             </form>
             <a href="#" class="enlace">
                 <figure>
-                <img src="/img/logo cosmos - copia.png" alt="Logo" class="logo">
+                <img src="../img/logo cosmos - copia.png" alt="Logo" class="logo">
                 </figure>
             </a>
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="/pages/pdd.html">Productos</a>
+                <li><a href="../pages/pdd.html">Productos</a>
                     <ul class="subMenu">
                         <li>Electrodomésticos</li>
                         <li>Computadoras</li>
@@ -55,9 +55,9 @@
                         <li>Fotografía</li>
                     </ul>
                 </li>
-                <li><a href="/pages/carrito.html">Carro de compras</a></li>
-                <li><a href="/pages/micuenta.html">Mi cuenta</a></li>
-                <li><a href="/pages/somos.html">Conocenos</a></li>
+                <li><a href="../pages/carrito.html">Carro de compras</a></li>
+                <li><a href="../pages/micuenta.html">Mi cuenta</a></li>
+                <li><a href="../pages/somos.html">Conocenos</a></li>
                 
             </ul>
             <!--Contenedor de Redes Sociales-->
