--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -41,7 +41,7 @@
                 </figure>             
                 </a>
                 <ul class="menu">
-                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="pdd.html">Productos</a>
                         <ul class="subMenu">
                             <li>Electrodomésticos</li>
