--- a/pages/micuenta.html
+++ b/pages/micuenta.html
@@ -39,7 +39,7 @@
                 </figure>            
                 </a>
                 <ul class="menu">
-                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="pdd.html">Productos</a>
                         <ul class="subMenu">
                             <li>Electrodomésticos</li>
